src/test/compile-fail/bang-tailexpr.rs
// xfail-stage0
// error-pattern: some control paths may return
fn f() -> ! { 3 }
fn main(){}
